# crypto-flow-bot

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  fly.toml  pyproject.toml
.github/workflows/: ci.yml  fly-deploy.yml
deploy/: crypto-flow-bot.service
src/crypto_flow_bot/: __main__.py  config.py  main.py
src/crypto_flow_bot/data/: binance.py  coinglass.py  liquidations.py
src/crypto_flow_bot/engine/: exits.py  funding_history.py  models.py  regime.py  signals.py  state.py
src/crypto_flow_bot/log/: store.py
src/crypto_flow_bot/notify/: stats.py  telegram.py
tests/: test_binance_snapshot.py  test_coinglass.py  test_exits.py  test_funding_history.py  test_indicators.py  test_liq_fast_loop.py  test_liquidations.py  test_p0_fixes.py  test_predicted_funding.py  test_regime.py  test_risk.py  test_signals.py  test_state.py  test_stats.py  test_taker_oi_quality.py  test_telegram.py  test_trend_slope.py
